# ensc351

public/: ENSC 351 Assignment 1.txt  ascii.txt  bootScript.sh  enablePWM.sh  fullSetup.sh  internetToTarget.sh  mountNFS.sh  nfs_message.txt  setup.txt  targetboot.sh  test.py
public/myApps/: a1  alsa_leaks.supp  as2  as3  ledTest  libasound-final-clean.supp  temp.supp  valgrind-suppressions.supp
public/myApps/beatbox-server-copy/public/javascripts/: beatbox_ui.js
work/frames/: depth_frame_01.csv  depth_frame_02.csv  depth_frame_03.csv  depth_frame_04.csv  depth_frame_05.csv  depth_frame_06.csv  depth_frame_07.csv  depth_frame_08.csv  depth_frame_09.csv  depth_frame_10.csv  visualize_depth.py
work/myApps/A1+GPIO/app/include/: game.h
work/myApps/A1+GPIO/app/src/: game.c
work/myApps/A1+GPIO/hal/include/hal/: joystick.h  spi.h
work/myApps/Assignment1/hal/include/hal/: button.h  gpio_map.h
work/myApps/Project/: CMakeLists.txt  gpio.txt
work/myApps/Project/app/: CMakeLists.txt
work/myApps/Project/app/src/: main.cpp
work/myApps/Project/hal/src/: button.c  gpio_map.c  led.c
work/myApps/as1/: CMakeLists.txt  as1-capture.txt
work/myApps/as1/app/: CMakeLists.txt
work/myApps/as1/app/src/: game.c  main.c
work/myApps/as1/hal/src/: joystick.c  spi.c
work/myApps/as2/: CMakeLists.txt
work/myApps/as2/app/: CMakeLists.txt
work/myApps/as2/app/include/: sampler.h  udp.h
work/myApps/as2/app/src/: main.c  periodTimer.c
work/myApps/as2/hal/include/hal/: pwm.h  time.h
work/myApps/as2/hal/src/: encoder.c  gpio.c  pwm.c  time.c
work/myApps/as2Submission/: as2-gdb.txt  as2.tgz  noworky.c
work/myApps/as3/: CMakeLists.txt  package-lock.json
work/myApps/as3/app/: CMakeLists.txt
work/myApps/as3/app/include/: beatbox.h  periodTimer.h
work/myApps/as3/app/src/: beatbox.c  main.c  sampler.c  udp.c
work/myApps/as3/as3-server/: server.js
work/myApps/as3/hal/include/hal/: adc.h  encoder.h  gpio.h  joystick.h  led.h  spi.h  time.h
work/myApps/as3/hal/src/: ADC.c  audioMixer.c  encoder.c  gpio.c  joystick.c  led.c  spi.c  time.c
work/myApps/cmake_starter/app/include/: reaction_methods.h
work/myApps/cmake_starter/app/src/: main.c  main2.c  reaction_methods.c
work/myApps/cmake_starter/hal/src/: joystick.c  spi.c
work/myApps/noworkyFolder/: noworky
